<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">rss reader</string>
    <string name="action_settings">Настройки</string>
    <string name="action_about">О программе</string>
    <string name="add">Добавить</string>
    <string name="feed_list">Список каналов</string>
    <string name="NAME">Имя</string>
    <string name="URL_LINK">Ссылка</string>
    <string name="Vvedite_novuju_ssylku">Введите новую ссылку</string>
    <string name="Big">Большой</string>
    <string name="all">Всю</string>
    <string name="one">Одну</string>
    <string name="medium">Средний</string>
    <string name="small">Маленький</string>
    <string name="clear_history">Очистить историю</string>
    <string name="headline_font_size">Размер шрифта заголовка</string>
    <string name="font_size_News">Размер шрифта новости</string>
    <string name="font_size_of_the_channel_list">Размер шрифта списка каналов</string>
    <string name="interface_settings_set_new_fsize">Устанавливает новый размер текста</string>
    <string name="interface_settings_enter_fsize">Введите размер текста</string>
    <string name="storage_news">Хранение новости</string>
    <string name="history_hint">Установите 0, чтобы не удалять историю, или введите срок хранения в днях.</string>
    <string name="history_update">Установите 0, чтобы не обновлять автоматически новости, или введите период обновления в часах.</string>
    <string name="Day">Дней</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="update_news">Обновление новостей</string>
    <string name="hour">Часов</string>
    <string name="about_str">О программе</string>
    <string name="full_about">Данная работа является дипломным проектом. Реализует удобный интерфейс для получение и отображения новостей с сайтов поддерживавших rss 2.0.  Буду благодарен за выявление багов. Если вы нашли, какие либо ошибки, пожалуйста, свяжитесь со мной по электронной почте:</string>
    <string name="gmail">joker2038@gmail.com</string>
    <string name="interface_settings_language">Язык приложения</string>
    <string name="interface_settings_set_language">Устанавливает язык интерфейса</string>
    <string name="interface_settings_check_language">Выберите язык</string>
    <string name="settings_language">Настройки языка</string>
    <string name="settings_size_of_the_text">Настройки размера текста</string>
    <string name="settings_update">Настройки обновления</string>
    <string name="settings_text_color">Настройки цвета текста</string>
    <string name="headline_color_size">Цвет текста заголовка</string>
    <string name="color_size_News">Цвет текста новости</string>
    <string name="color_size_of_the_channel_list">Цвет текста списка каналов</string>
    <string name="interface_settings_check_color">Выберите цвет</string>
    <string name="interface_settings_set_new_color">Устанавливает новый цвет текста</string>
    <string name="interface_settings_set_new_update">Устанавливает период обновления</string>
    <string name="interface_settings_set_new_hint">Устанавливает период удаления</string>

</resources>
