<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_str" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_about" />

    <TextView
        android:id="@+id/textView3"
        android:autoLink="email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gmail" />

</LinearLayout>
